# project-phoenix

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: deploy-data.yml
agents/: __init__.py  climate_agent.py  config.py  council.py  economic_agent.py  llm_client.py  policy_agent.py  recovery_architect.py  risk_analyst.py  strategy_agent.py
api/: __init__.py  main.py
api/routes/: analysis.py  strategy.py
csv/: filtered_data_complete.csv
dataset/: DestinationDataset_0s8.json  SourceDataset_0s8.json
examples/: demo_council.py
factory/: phoenix-fc.json
frontend/: app.py
linkedService/: AzureBlobStorage1.json
pipeline/: phoenixpipeline_01.json
tests/: test_azure.py  test_azure_openai.py  test_full_council.py  test_hello_world.py  test_llm_agents.py  test_ollama.py
